--- a/public/views/contato.html
+++ b/public/views/contato.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contato - Samuel Gomes</title>
-    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <header>
+      <nav>
+        <a href="/index.html" class="nav-link">Início</a>
+        <a href="/contato.html" class="nav-link">Contato</a>
+        <a href="/projetos.html" class="nav-link">Projetos</a>
+        <a href="/sobre.html" class="nav-link">Sobre Mim</a>
+      </nav>
       <div>
         <div class="logo">Samuel Gomes</div>
         <div class="title">Programador Web Full Stack</div>
       </div>
-      <nav>
-        <a href="/index.html" class="nav-link">Início</a>
-        <a href="/sobre.html" class="nav-link">Sobre Mim</a>
-        <a href="/contato.html" class="nav-link">Contato</a>
-      </nav>
       <div></div>
     </header>
     <div class="container">
