Adicionado ao arquivo html cabeçalho e primeira div apresentation

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -9,40 +9,21 @@
   <body>
     <header>
       <nav>
-        <a href="/index.html" class="nav-link">Início</a>
-        <a href="/contato.html" class="nav-link">Contato</a>
-        <a href="/sobre.html" class="nav-link">Sobre Mim</a>
-        <a href="/projetos.html" class="nav-link">Projetos</a>
+        <a href="#" class="nav-link">Sobre</a>
+        <a href="#" class="nav-link">Projetos</a>
+        <a href="#" class="nav-link">Contato</a>
       </nav>
-      <div>
-        <div class="logo">Samuel Gomes</div>
-        <div class="title">Programador Web Full Stack</div>
-      </div>
-      <div></div>
     </header>
-    <div class="container">
-      <section>
-        <h1>Samuel, Programador</h1>
-        <p>
-          Sou um programador web full stack apaixonado por desenvolvimento de
-          software e tecnologia. Tenho experiência com várias tecnologias web
-          modernas, incluindo HTML, CSS, JavaScript.
-        </p>
-      </section>
 
-      <section>
-        <a href="/sobre.html" class="call-to-action">Saiba Mais</a>
-        <a href="/contato.html" class="call-to-action">Entre em Contato</a>
-      </section>
+    <main>
+      <div id="apresentation">
+        <h1>Samuel
+          <br>Programador
+          <br><span>Back-End_</span>
+        </h1>
+      </div>
+    </main>
 
-      <section class="skills">
-        <h2>Habilidades</h2>
-        <ul>
-          <li>HTML, CSS e JavaScript</li>
-          <li>Versionamento de código com Git</li>
-        </ul>
-      </section>
-    </div>
     <footer>
       <p>&copy; 2024 Samuel Gomes. Todos os direitos reservados.</p>
     </footer>
