svgs adicionadas para a seção criada em html contacts

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -141,6 +141,24 @@
       </div>
     </section>
 
+    <section id="contacts">
+      <div id="contacts-container">
+        <div id="title-contacts">
+          <h2>Contatos</h2>
+        </div>
+        <div id="container-contacts">
+          <div id="apresentation-contacts">
+            <p>Que tal transformar suas ideias em código? Entre em contato para descobrir como posso transformar seus conceitos em soluções digiais inovadoras. Vamos criar algo novo !</p>
+            <div id="social-medias">
+              <a href="#"><img src="../imgs/linkedin.svg" alt="linkedin" width="50" height="50" /></a>
+              <a href="#"><img src="../imgs/whatsapp.svg" alt="whatsapp" width="50" height="50" /></a>
+              <a href="#"><img src="../imgs/email.svg" alt="github" width="50" height="50" /></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </main>
 
   <footer>
