--- a/public/views/index.html
+++ b/public/views/index.html
@@ -5,23 +5,28 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Início - Samuel Gomes, Programador</title>
-  <link rel="stylesheet" href="public/css/style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="../styles/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <header>
-    <nav>
-      <a href="#" class="nav-link">Sobre</a>
-      <a href="#" class="nav-link">Projetos</a>
-      <a href="#" class="nav-link">Contato</a>
+    <nav class="navbar navbar-expand-sm bg-primary  shadow-sm">
+      <div class="container-fluid fs-5 text-primary fw-light bg-primary pt-4 pm-2 px-4">
+        <a href="#" class="nav-link">Sobre</a>
+        <a href="#" class="nav-link">Projetos</a>
+        <a href="#" class="nav-link">Contato</a>
+      </div>
     </nav>
   </header>
 
   <main>
     <section id="apresentation">
-      <div id="header-apresentation">
-        <h1>Samuel
+      <div id="header-apresentation" class="text-primary">
+        <h1 class="fs-1 fw-light">Samuel
           <br>Programador
           <br><span>Back-End_</span>
         </h1>
