--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -3,7 +3,7 @@
     font-family: "Bai Jamjuree", serif;;
 }
 
-svg {
+#icon {
     width: 3.2rem;
     height: 2.2rem;
     background-color: inherit;
@@ -19,4 +19,153 @@ svg {
 
 .bg-secondary {
     background-color: #79D7BE !important;
+}
+
+.bg-body {
+    background-color: #DDDDDD !important;
+}
+
+.bg-tertiary {
+    background-color: #D0CDCD !important;
+}
+
+.mt-1 {
+    margin-top: 1.25rem !important;
+}
+
+.mt-2 {
+    margin-top: 2rem !important;
+}
+
+.mt-3 {
+    margin-top: 5.4rem !important;
+}
+
+.mb-1 {
+    margin-bottom: 1.25rem !important;
+}
+
+.mb-2 {
+    margin-bottom: 2rem !important;
+}
+
+.mb-3 {
+    margin-bottom: 5.4rem !important;
+}
+
+.my-1 {
+    margin-top: 1.25rem !important;
+    margin-bottom: 1.25rem !important;
+}
+
+.my-2 {
+    margin-top: 2rem !important;
+    margin-bottom: 2rem !important;
+}
+
+.my-3 {
+    margin-top: 5.4rem !important;
+    margin-bottom: 5.4rem !important;
+}
+
+.mx-1 {
+    margin-left: 1.25rem !important;
+    margin-right: 1.25rem !important;
+}
+
+.mx-2 {
+    margin-left: 2rem !important;
+    margin-right: 2rem !important;
+}
+
+
+.pt-2 {
+    padding-top: 2rem !important;
+}
+
+.pt-3 {
+    padding-top: 5.4rem !important;
+}
+
+.py-1 {
+    padding-top: 1.25rem !important;
+    padding-bottom: 1.25rem !important;
+}
+
+.py-2 {
+    padding-top: 2rem !important;
+    padding-bottom: 2rem !important;
+}
+
+.py-3 {
+    padding-top: 5.4rem !important;
+    padding-bottom: 5.4rem !important;
+}
+
+.px-1 {
+    padding-left: 1.25rem !important;
+    padding-right: 1.25rem !important;
+}
+
+.px-2 {
+    padding-left: 2rem !important;
+    padding-right: 2rem !important;
+}
+
+.btn {
+    background-color: #2E5077;
+    color: #F6F4F0;
+    border: none;
+    padding: 0.6rem 1rem;
+    cursor: pointer;
+    border-radius: 0.5rem;
+}
+
+.carousel {
+    --carousel-caption-width: 50%;
+}
+
+@media screen and (min-width: 992px) {
+
+    #navbar {
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        padding: 0.6rem 0 !important ;
+    }
+
+    #item-navbar {
+        margin-left: 2rem;
+        font-size: 1rem;
+        font-weight: 400;
+    }
+
+    #header-apresentation {
+        min-height: 80vh !important;
+    }
+
+    #name-apresentation {
+        font-size: 4rem !important;
+        padding: 0 !important;
+    }
+
+    #body-about {
+        min-height: 36rem;
+        max-height: 46rem;
+    }
+
+    #text-about {
+        display: flex !important;
+        align-items: center !important;
+        padding: 0 2rem;
+        width: 80%;
+        min-height: 500px;
+        max-height: 600px;
+    }
+
+    #paragraph-about {
+        font-size: medium !important;
+        font-weight: 400;
+    }
+    
 }
