--- a/public/views/index.html
+++ b/public/views/index.html
@@ -150,9 +150,9 @@
     </section>
 
     <section id="projects">
-      <div id="title-projects" class="d-flex justify-content-center align-items-center my-3 bg-primary"
+      <div id="container-title-projects" class="d-flex justify-content-center align-items-center my-3 bg-primary"
         style="height: 5rem;">
-        <h2 class="text-primary bg-primary fs-1">Projetos</h2>
+        <h2 id="title-projects" class="text-primary bg-primary fs-1">Projetos</h2>
       </div>
       <div id="projects-carousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
@@ -212,7 +212,7 @@
 
     <section id="contacts">
       <div id="contacts-container">
-        <div id="title-contacts" class="d-flex justify-content-center align-items-center mb-3 bg-primary"
+        <div id="container-title-contacts" class="d-flex justify-content-center align-items-center mb-3 bg-primary"
           style="height: 5rem;">
           <h2 class="text-primary bg-primary fs-1">Contatos</h2>
         </div>
