--- a/public/views/index.html
+++ b/public/views/index.html
@@ -158,11 +158,11 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="d-flex justify-content-center align-items-center bg-body mb-3 ">
-              <div class="d-flex flex-column align-items-center my-1 mx-2 py-1 px-1 bg-tertiary rounded" style="max-width: 312px;">
+              <div id="project" class="d-flex flex-column align-items-center my-1 mx-2 py-1 px-1 bg-tertiary rounded" style="max-width: 312px;">
                 <img src="../imgs/tecnologies.jpg" alt="tecnologias" height="210" width="272" class="rounded" />
                 <div class="d-flex flex-column align-items-center mt-1 bg-tertiary">
-                  <h3 class="fs-1 bg-tertiary">Lorem ipsum</h3>
-                  <p class="fs-4 lh-sm bg-tertiary" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur
+                  <h3 id="title-description-project" class="fs-1 bg-tertiary">Lorem ipsum</h3>
+                  <p id="description-project" class="fs-4 lh-sm bg-tertiary" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur
                     adipisicing elit. Quibusdam adipisci repellat neque. Culpa minus eos, ab, quidem voluptas nesciunt commodi
                     unde, ratione magnam numquam nisi sequi. Provident accusamus cumque dolores!</p>
                 </div>
@@ -172,11 +172,11 @@
           </div>
           <div class="carousel-item">
             <div class="d-flex justify-content-center align-items-center bg-body mb-3 ">
-              <div class="d-flex flex-column align-items-center my-1 mx-2 py-1 px-1 bg-tertiary rounded" style="max-width: 312px;">
+              <div id="project" class="d-flex flex-column align-items-center my-1 mx-2 py-1 px-1 bg-tertiary rounded" style="max-width: 312px;">
                 <img src="../imgs/tecnologies.jpg" alt="tecnologias" width="272" height="210" class="rounded" />
                 <div class="d-flex flex-column align-items-center mt-1 bg-tertiary">
-                  <h3 class="fs-1 bg-tertiary">Lorem ipsumim</h3>
-                  <p class="fs-4 lh-sm bg-tertiary" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur
+                  <h3 id="title-description-project" class="fs-1 bg-tertiary">Lorem ipsumim</h3>
+                  <p id="description-project" class="fs-4 lh-sm bg-tertiary" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur
                     adipisicing elit. Quibusdam adipisci repellat neque. Culpa minus eos, ab, quidem voluptas nesciunt commodi
                     unde, ratione magnam numquam nisi sequi. Provident accusamus cumque dolores!</p>
                     <a href="#" class="btn btn-primary fs-5 d-flex align-items-center justify-content-center text-primary">Saiba Mais</a>
@@ -186,11 +186,11 @@
           </div>
           <div class="carousel-item">
             <div class="d-flex justify-content-center align-items-center bg-body mb-3 ">
-              <div class="d-flex flex-column align-items-center my-1 mx-2 py-1 px-1 bg-tertiary rounded" style="max-width: 312px;">
+              <div id="project" class="d-flex flex-column align-items-center my-1 mx-2 py-1 px-1 bg-tertiary rounded" style="max-width: 312px;">
                 <img src="../imgs/tecnologies.jpg" alt="tecnologias" width="272" height="210" class="rounded" />
                 <div class="d-flex flex-column align-items-center mt-1 bg-tertiary">
-                  <h3 class="fs-1 bg-tertiary">Lorem ipsumo</h3>
-                  <p class="fs-4 lh-sm bg-tertiary" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur
+                  <h3 id="title-description-project" class="fs-1 bg-tertiary">Lorem ipsumo</h3>
+                  <p id="description-project" class="fs-4 lh-sm bg-tertiary" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur
                     adipisicing elit. Quibusdam adipisci repellat neque. Culpa minus eos, ab, quidem voluptas nesciunt commodi
                     unde, ratione magnam numquam nisi sequi. Provident accusamus cumque dolores!</p>
                     <a href="#" class="btn btn-primary fs-5 d-flex align-items-center justify-content-center text-primary">Saiba Mais</a>
