mudança de posicionamentos dos titulos de projetos e contatos, adiciona id na descrição de contatos

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -219,7 +219,7 @@
         <div id="container-contacts" class="d-flex justify-content-center align-items-center">
           <div id="apresentation-contacts"
             class="d-flex flex-column align-items-center py-1 px-2 mx-1 bg-primary rounded" style="max-width: 420px;">
-            <p class="bg-transparent fs-4 lh-sm text-primary" style="text-align: justify;">Que tal transformar suas
+            <p id="paragraph-contact" class="bg-transparent fs-4 lh-sm text-primary" style="text-align: justify;">Que tal transformar suas
               ideias em código? Entre em contato para descobrir como posso transformar seus conceitos em soluções
               digitais inovadoras. Vamos criar algo novo !</p>
             <div id="social-medias"
