--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -170,13 +170,14 @@
 
     #container-title-projects {
         width: 50%;
-        border-radius: 0 3rem 3rem 0;
+        border-radius: 3rem 0 0 3rem;
+        margin-left: auto;
     }
 
     #container-title-contacts {
         width: 50%;
-        border-radius: 3rem 0 0 3rem;
-        margin-left: auto;
+        border-radius: 0 3rem 3rem 0;
+        
     }
 
     #project {
@@ -184,11 +185,11 @@
     }
 
     #title-description-project {
-        font-size: 30px !important;;
+        font-size: 1.8rem !important;;
     }
 
     #description-project {
-        font-size: 20px !important;
+        font-size: 1.2rem !important;
     }
     
 }
