Adicionado mais um botão que leva ao github, links atribuidos ao botão github e para baixar cv

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -142,10 +142,16 @@
             de dados, APIs RESTful, Controle de versão (Git).
           </p>
         </div>
-        <a href="#" class="btn btn-primary fs-5 my-1 d-flex align-items-center justify-content-center text-primary">
-          Baixar CV
-          <img class="" src="../imgs/dowload.svg" width="20px" height="20px" style="background-color: inherit;"></p>
-        </a>
+        <div id="buttons-about" class="d-flex align-items-center bg-body">
+          <a href="../imgs/curriculo.pdf" download="curriculosamuel.pdf" class="btn btn-primary fs-5 my-1 me-3 d-flex align-items-center justify-content-center text-primary">
+            Baixar CV
+            <img class="" src="../imgs/dowload.svg" width="20px" height="20px" style="background-color: inherit;"></p>
+          </a>
+          <a href="https://github.com/samuelgomesp" class="btn btn-primary fs-5 my-1 ms-3 d-flex align-items-center justify-content-center text-primary">
+            GitHub
+            <img class="ms-1" src="../imgs/github.svg" width="20px" height="20px" style="background-color: inherit;"></p>
+          </a>
+        </div>
       </div>
     </section>
 
