--- a/public/views/index.html
+++ b/public/views/index.html
@@ -17,11 +17,11 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-sm bg-primary  shadow-sm">
-      <div id="navbar" class="container-fluid fs-5 text-primary fw-light bg-primary pt-4 pm-2 px-4">
-        <a id="item-navbar" href="#" class="nav-link">Sobre</a>
-        <a id="item-navbar" href="#" class="nav-link">Projetos</a>
-        <a id="item-navbar" href="#" class="nav-link">Contato</a>
+    <nav class="navbar navbar-expand-sm bg-primary  shadow-sm" >
+      <div id="navbar" class="container-fluid fs-5 text-primary fw-light bg-primary pt-4 pm-2 px-4" >
+        <a id="item-navbar" href="#about" class="nav-link">Sobre</a>
+        <a id="item-navbar" href="#projects" class="nav-link">Projetos</a>
+        <a id="item-navbar" href="#contacts" class="nav-link">Contato</a>
       </div>
     </nav>
   </header>
@@ -36,7 +36,7 @@
         </h1>
       </div>
       <div id="tecnologies" class="bg-secondary shadow-sm">
-        <div id="icons-tecnologies" class="d-flex justify-content-evenly bg-secondary" style="padding: 0.6rem 0;">
+        <div id="icons-tecnologies" class="bg-secondary">
           <svg id="icon" viewBox="0 0 256 256" version="1.1" xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" fill="#000000">
             <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -133,8 +133,8 @@
         <div id="text-about" class="d-flex flex-column align-items-center mt-2 mx-2 bg-tertiary rounded flex-lg-row justify-content-lg-around">
           <img src="../imgs/foto-rosto-samuel-2.PNG" alt="Foto de Samuel Gomes" width="273" height="278" class=" rounded-circle object-fit-cover my-2 mx-2 shadow-sm"/>
           <p id="paragraph-about" style="background-color: inherit; text-align: justify" class="fs-4 mx-1 my-1 lh-sm px-sm-3 py-lg-5 px-lg-5">
-            Olá ! me chamo Samuel, sou desenvolvedor <a href="#" class="text-decoration-underline bg-transparent">Back-End.</a> Tenho como principal objetivo criar soluções robustas e
-            eficientes. Minha linguagem de expertise é <a href="#" class="text-decoration-underline bg-transparent">JavaScript</a> e desenvolvo soluções escaláveis e de alto desempenho.
+            Olá ! me chamo Samuel, sou desenvolvedor <a href="https://www.devmedia.com.br/programador-back-end/42224" class="text-decoration-underline bg-transparent">Back-End.</a> Tenho como principal objetivo criar soluções robustas e
+            eficientes. Minha linguagem de expertise é <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" class="text-decoration-underline bg-transparent">JavaScript</a> e desenvolvo soluções escaláveis e de alto desempenho.
             Embora meu foco seja Back-End, também me mantenho atualizado com tecnologias Front-End para ser um
             profissional completo. Minha curiosidade é minha maior inspiração. Adoro explorar como o código funciona e
             encontrar maneiras de melhorar softwares, aplicativos e sistemas. Minhas habilidades técnicas que posso
