Links adicionados às tags <a> e configurados

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -133,8 +133,8 @@
         <div id="text-about" class="d-flex flex-column align-items-center mt-2 mx-2 bg-tertiary rounded flex-lg-row justify-content-lg-around">
           <img src="../imgs/foto-rosto-samuel-2.PNG" alt="Foto de Samuel Gomes" width="273" height="278" class=" rounded-circle object-fit-cover my-2 mx-2 shadow-sm"/>
           <p id="paragraph-about" style="background-color: inherit; text-align: justify" class="fs-4 mx-1 my-1 lh-sm px-sm-3 py-lg-5 px-lg-5">
-            Olá ! me chamo Samuel, sou desenvolvedor <a href="https://www.devmedia.com.br/programador-back-end/42224" class="text-decoration-underline bg-transparent">Back-End.</a> Tenho como principal objetivo criar soluções robustas e
-            eficientes. Minha linguagem de expertise é <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" class="text-decoration-underline bg-transparent">JavaScript</a> e desenvolvo soluções escaláveis e de alto desempenho.
+            Olá ! me chamo Samuel, sou desenvolvedor <a href="https://www.devmedia.com.br/programador-back-end/42224" target="_blank" rel="noopener noreferrer" class="text-decoration-underline bg-transparent">Back-End.</a> Tenho como principal objetivo criar soluções robustas e
+            eficientes. Minha linguagem de expertise é <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" target="_blank" rel="noopener noreferrer" class="text-decoration-underline bg-transparent">JavaScript</a> e desenvolvo soluções escaláveis e de alto desempenho.
             Embora meu foco seja Back-End, também me mantenho atualizado com tecnologias Front-End para ser um
             profissional completo. Minha curiosidade é minha maior inspiração. Adoro explorar como o código funciona e
             encontrar maneiras de melhorar softwares, aplicativos e sistemas. Minhas habilidades técnicas que posso
@@ -143,11 +143,11 @@
           </p>
         </div>
         <div id="buttons-about" class="d-flex align-items-center bg-body">
-          <a href="../imgs/curriculo.pdf" download="curriculosamuel.pdf" class="btn btn-primary fs-5 my-1 me-3 d-flex align-items-center justify-content-center text-primary">
+          <a href="../imgs/curriculo.pdf" target="_blank" rel="noopener noreferrer" download="curriculosamuel.pdf" class="btn btn-primary fs-5 my-1 me-3 d-flex align-items-center justify-content-center text-primary">
             Baixar CV
             <img class="" src="../imgs/dowload.svg" width="20px" height="20px" style="background-color: inherit;"></p>
           </a>
-          <a href="https://github.com/samuelgomesp" class="btn btn-primary fs-5 my-1 ms-3 d-flex align-items-center justify-content-center text-primary">
+          <a href="https://github.com/samuelgomesp" target="_blank" rel="noopener noreferrer" class="btn btn-primary fs-5 my-1 ms-3 d-flex align-items-center justify-content-center text-primary">
             GitHub
             <img class="ms-1" src="../imgs/github.svg" width="20px" height="20px" style="background-color: inherit;"></p>
           </a>
@@ -230,11 +230,11 @@
               digitais inovadoras. Vamos criar algo novo !</p>
             <div id="social-medias"
               class="w-100 py-2 d-flex justify-content-around align-items-center bg-tertiary rounded">
-              <a href="https://www.linkedin.com/in/samuelgomespereira/"><img class="bg-tertiary" src="../imgs/linkedin.svg" alt="linkedin" width="50"
+              <a href="https://www.linkedin.com/in/samuelgomespereira/" target="_blank" rel="noopener noreferrer"><img class="bg-tertiary" src="../imgs/linkedin.svg" alt="linkedin" width="50"
                   height="50" /></a>
-              <a href="#"><img class="bg-tertiary" src="../imgs/whatsapp.svg" alt="whatsapp" width="50"
+              <a href="https://wa.me/+5561996602469" target="_blank" rel="noopener noreferrer"><img class="bg-tertiary" src="../imgs/whatsapp.svg" alt="whatsapp" width="50"
                   height="50" /></a>
-              <a href="#"><img class="bg-tertiary" src="../imgs/email.svg" alt="github" width="50" height="50" /></a>
+              <a href="mailto:samuel.gomes.p99@gmail.com" target="_blank" rel="noopener noreferrer"><img class="bg-tertiary" src="../imgs/email.svg" alt="github" width="50" height="50" /></a>
             </div>
           </div>
         </div>
