Ultimas atualizações feitas, projetos atualizados com suas respectivas descrições, projeto será encaminhado para o github

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -165,27 +165,23 @@
           <div class="carousel-item active">
             <div class="d-flex justify-content-center align-items-center bg-body mb-3 ">
               <div id="project" class="d-flex flex-column align-items-center my-1 mx-2 py-1 px-1 bg-tertiary rounded" style="max-width: 312px;">
-                <img src="../imgs/tecnologies.jpg" alt="tecnologias" height="210" width="272" class="rounded" />
+                <img src="../imgs/app-financas.png" alt="tecnologias" height="210" width="272" class="rounded" style="object-fit: cover;"/>
                 <div class="d-flex flex-column align-items-center mt-1 bg-tertiary">
-                  <h3 id="title-description-project" class="fs-1 bg-tertiary">Lorem ipsum</h3>
-                  <p id="description-project" class="fs-4 lh-sm bg-tertiary" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur
-                    adipisicing elit. Quibusdam adipisci repellat neque. Culpa minus eos, ab, quidem voluptas nesciunt commodi
-                    unde, ratione magnam numquam nisi sequi. Provident accusamus cumque dolores!</p>
+                  <h3 id="title-description-project" class="fs-1 bg-tertiary text-center">Página de Controle Financeiro</h3>
+                  <p id="description-project" class="fs-4 lh-sm bg-tertiary" style="text-align: justify;">Este é um projeto no qual desenvolvi uma página para auxiliar o controle de finanças, podendo ser usada por exemplo para controle de gastos do mês, detalhar despesas e controlar fluxo de ganhos e gastos.</p>
                 </div>
-                <a href="#" class="btn btn-primary fs-5 d-flex align-items-center justify-content-center text-primary">Saiba Mais</a>
+                <a href="https://github.com/samuelgomesp/controle-financas" target="_blank" rel="noopener noreferrer" class="btn btn-primary fs-5 d-flex align-items-center justify-content-center text-primary">Saiba Mais</a>
               </div>
             </div>
           </div>
           <div class="carousel-item">
             <div class="d-flex justify-content-center align-items-center bg-body mb-3 ">
               <div id="project" class="d-flex flex-column align-items-center my-1 mx-2 py-1 px-1 bg-tertiary rounded" style="max-width: 312px;">
-                <img src="../imgs/tecnologies.jpg" alt="tecnologias" width="272" height="210" class="rounded" />
+                <img src="../imgs/app-playlist.jpg" alt="tecnologias" width="272" height="210" class="rounded"/>
                 <div class="d-flex flex-column align-items-center mt-1 bg-tertiary">
-                  <h3 id="title-description-project" class="fs-1 bg-tertiary">Lorem ipsumim</h3>
-                  <p id="description-project" class="fs-4 lh-sm bg-tertiary" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur
-                    adipisicing elit. Quibusdam adipisci repellat neque. Culpa minus eos, ab, quidem voluptas nesciunt commodi
-                    unde, ratione magnam numquam nisi sequi. Provident accusamus cumque dolores!</p>
-                    <a href="#" class="btn btn-primary fs-5 d-flex align-items-center justify-content-center text-primary">Saiba Mais</a>
+                  <h3 id="title-description-project" class="fs-1 bg-tertiary text-center">Api de Playlist de Músicas</h3>
+                  <p id="description-project" class="fs-4 lh-sm bg-tertiary" style="text-align: justify;">Esta é uma Api de Playlists de Músicas. Além de armazenar dados das playlists, a API permite manipulá-los de diversas formas, possibilitando a adição, consulta, atualização e remoção tanto de músicas dentro das playlists quanto das próprias playlists.</p>
+                    <a href="https://github.com/samuelgomesp/api-playlist" target="_blank" rel="noopener noreferrer" class="btn btn-primary fs-5 d-flex align-items-center justify-content-center text-primary">Saiba Mais</a>
                 </div>
               </div>
             </div>
@@ -193,13 +189,11 @@
           <div class="carousel-item">
             <div class="d-flex justify-content-center align-items-center bg-body mb-3 ">
               <div id="project" class="d-flex flex-column align-items-center my-1 mx-2 py-1 px-1 bg-tertiary rounded" style="max-width: 312px;">
-                <img src="../imgs/tecnologies.jpg" alt="tecnologias" width="272" height="210" class="rounded" />
+                <img src="../imgs/app-productive.png" alt="tecnologias" width="272" height="210" class="rounded" style="object-fit: cover;"/>
                 <div class="d-flex flex-column align-items-center mt-1 bg-tertiary">
-                  <h3 id="title-description-project" class="fs-1 bg-tertiary">Lorem ipsumo</h3>
-                  <p id="description-project" class="fs-4 lh-sm bg-tertiary" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur
-                    adipisicing elit. Quibusdam adipisci repellat neque. Culpa minus eos, ab, quidem voluptas nesciunt commodi
-                    unde, ratione magnam numquam nisi sequi. Provident accusamus cumque dolores!</p>
-                    <a href="#" class="btn btn-primary fs-5 d-flex align-items-center justify-content-center text-primary">Saiba Mais</a>
+                  <h3 id="title-description-project" class="fs-1 bg-tertiary">JS Productive</h3>
+                  <p id="description-project" class="fs-4 lh-sm bg-tertiary" style="text-align: justify;">Essa aplicação foi desenvolvida para servir de auxílio para o cumprimento de tarefas, o JS productive é bem dinâmico e simples de se utilizar porém desenvolvido utilizando recursos avançados.</p>
+                    <a href="https://github.com/samuelgomesp/tasks-list-js" target="_blank" rel="noopener noreferrer" class="btn btn-primary fs-5 d-flex align-items-center justify-content-center text-primary">Saiba Mais</a>
                 </div>
               </div>
             </div>
